blockml/test/errors/11_report/e90/e90d.dashboard
dashboard: e90d
title: 'sales'
reports:
- title: 'overview'
  model: e90m
  select:         
  - a.calc1

